--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -359,7 +359,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  MODIFIER_CAN_TRANSFER_VASSAL_WARGOAL:1 "Allows '§YTransfer Subject§!' Peace Treaty at half cost"
  MODIFIER_CAN_CHAIN_CLAIM:0 "Allow Claims Bordering Claims"
  MODIFIER_FREE_MAINTENANCE_ON_EXPL_CONQ:0 "No Maintenance on Exploring Leaders"
- MODIFIER_CAN_COLONY_BOOST_DEVELOPMENT:1 "+1 Tax, +1 Production and +1 Manpower when Colony Finished"
+ MODIFIER_CAN_COLONY_BOOST_DEVELOPMENT:2 "+1 of §Yeach Development§! when Colony Finished"
  MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN:3 "Combat Bonus in Terrain of Capital: §G+1§!"
  MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV:1 "§G+1 Combat Bonus§! for us due to same terrain as in our Capital"
  MODIFIER_CAN_BYPASS_FORTS:0 "Ignore Zone of Control"
@@ -564,10 +564,10 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  ABANDONSTATE_IS_CONVERTING_RELIGION:0 "It is not possible to abandon this state as we are converting the people of $PROVINCENAME|Y$.\n"
  ABANDONSTATE_IS_CONVERTING_CULTURE:0 "It is not possible to abandon this state as we are converting the people of $PROVINCENAME|Y$.\n"
  STATE_IRO:0 "$NAME$ is a §YState§!."
- STATE_DRO:1 "A realm is divided into several territories, where all provinces owned in an area make up one territory. A territory can be made into a state of the nation, which is an integral part of the realm. This will cost some maintenance depending on the distance from the capital, while reducing its minimum autonomy dramatically.\n\nDevelopment in states and territories use up governing capacity. Territories development only counts as using 25% governing capacity. The governing capacity can be increased by increasing government rank, advancing administrative technology and completing the Administrative Ideas group."
+ STATE_DRO:2 "A realm is divided into several territories, where all provinces owned in an area make up one territory. A territory can be made into a state of the nation, which is an integral part of the realm. This will cost some maintenance depending on the distance from the capital, while reducing its minimum autonomy dramatically.\n\nDevelopment in states and territories use up governing capacity. Territories development only counts as using 25% governing capacity. The governing capacity can be increased by increasing government rank, advancing administrative technology, completing the Administrative Ideas group and using Reform Progress to Expand Administration in the Government Reforms window."
  CONFIRMAKESTATETITLE:0 "Turn Territory into State"
- CONFIRMMAKESTATETEXT:1 "Making $NAME$ into a State will cost us $COST|Y$¤ in maintenance every month, while it will increase our income by about $INC|Y$¤ when autonomy has been reduced to lower levels. It will also increase our manpower and sailors from the area.\n\nTurning $NAME$ into a state will use $CAP|Y0$ out of our Governing Capacity bringing it up to a total of $USED_CAP|Y0$."
- CONFIRMMAKESTATETEXT_OVER_CAP:0 "Making $NAME$ into a State will cost us $COST|Y$¤ in maintenance every month, while it will increase our income by about $INC|Y$¤ when autonomy has been reduced to lower levels. It will also increase our manpower and sailors from the area.\n\nTurning $NAME$ into a state will use $CAP|Y0$ out of our Governing Capacity bringing it up to a total of $USED_CAP|Y0$.\n§RThis will bring us over our Governing Capacity of $MAX_CAP|Y0$ and incur penalties!"
+ CONFIRMMAKESTATETEXT:2 "Making $NAME$ into a State will cost us $COST|Y$¤ in maintenance every month, while it will increase our income by about $INC|Y$¤ when autonomy has been reduced to lower levels. It will also increase our manpower and sailors from the area.\nTurning $NAME$ into a state will use $CAP|Y0$ out of our Governing Capacity bringing it up to a total of $USED_CAP|Y0$.\n\nAny provinces belonging to a §YTrade Company§! will be automatically §Rremoved§! and added to the state!"
+ CONFIRMMAKESTATETEXT_OVER_CAP:1 "Making $NAME$ into a State will cost us $COST|Y$¤ in maintenance every month, while it will increase our income by about $INC|Y$¤ when autonomy has been reduced to lower levels. It will also increase our manpower and sailors from the area.\nTurning $NAME$ into a state will use $CAP|Y0$ out of our Governing Capacity bringing it up to a total of $USED_CAP|Y0$.\n§RThis will bring us over our Governing Capacity of $MAX_CAP|Y0$ and incur penalties!§!\nAny provinces belonging to a §YTrade Company§! will be automatically §Rremoved§! and added to the state!"
  CONFIRABANDONSTATEITLE:0 "Abandon State into a Territory"
  CONFIRMABANDONSTATETEXT:1 "By no longer considering $NAME$ as a State, we will no longer be forced to pay $COST|Y$¤ maintenance every month, but their local autonomy in the provinces will increase to a much higher level.\n\n§RAll modifiers given by increasing local autonomy will be removed from the provinces.§!"
  CONFIRMABANDONSTATECORECOST:0 "All your Cores in this State will become Territorial Cores.\nMaking them full Cores again will cost a total of §R$COST$§!£adm£."
@@ -1162,8 +1162,8 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  IMPREF_OVERLORD_VOTING_NO:0 "Overlord opposes the reform: $VAL$\n"
  IMPREF_OVERLORD_VOTING_YES:0 "Overlord supports the reform: $VAL$\n"
  IMPREF_OVEREXTEND:0 "Emperor is overextended: $VAL$\n"
- IMPREF_SIMILAR_CULTURE:0 "Emperor not $NAME$: $VAL$\n"
- IMPREF_DIFF_CULTURE:0 "Emperor not $NAME$: $VAL$\n"
+ IMPREF_SIMILAR_CULTURE:1 "Emperor not $NAME|Y$: $VAL$\n"
+ IMPREF_SAME_CULTURE:0 "Emperor is also $NAME|Y$: $VAL$\n"
  IMPREF_NON_ACCEPTED_CULTURE:0 "$NAME|Y$ is not an accepted culture in $EMPEROR$: $VAL$\n"
  IMPREF_DIFF_CULTURE:1 "Emperor not $NAME|Y$: $VAL$\n"
  IMPREF_WAR:0 "At War with Emperor: $VAL$\n"
@@ -1320,7 +1320,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  GAIN_CB:1 "§Y$ACTIVE$§! gain §Y$TYPE$§W Casus Belli on §Y$WHO$§W.\nThis Casus Belli will last for §G$LENGTH$§! years.\n"
  GAIN_CB_MONTHS:0 "§Y$ACTIVE$§! gain §Y$TYPE$§W Casus Belli on §Y$WHO$§W.\nThis Casus Belli will last for §G$LENGTH$§! months.\n"
  LOSE_CB:0 "§Y$ACTIVE$§! lose §Y$TYPE$§W Casus Belli on §Y$WHO$§W.\n"
- REV_GAIN_CB:0 "§Y$ACTIVE$§W gains a §Y$TYPE$§W Casus Belli on §Y$PASSIVE$§W."
+ REV_GAIN_CB:1 "§Y$ACTIVE$§W gains a §Y$TYPE$§W Casus Belli on §Y$PASSIVE$§W.\nThis Casus Belli will last for §G$LENGTH$§! years.\n"
  SELECT_INFANTRY_TYPE:0 "Select infantry type"
  SELECT_CAVALRY_TYPE:0 "Select cavalry type"
  SELECT_ARTILLERY_TYPE:0 "Select artillery type"
