little timmy sees billy joel in vienna

--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -31,7 +31,7 @@
  carribean_trade:0 "Carribean"
  tunis:0 "Barbary Coast"
  genua:0 "Mediterranean"
- wien:0 "Wien"
+ wien:0 "Danube"
  saxony:0 "Prague"
  gc_south_germany_tradenode:0 "Swabia"
  pest:0 "Pest"
