--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -176,3 +176,7 @@
 
  regional_hub:0 "Regional Hub"
  regional_hub_desc:0 ""
+ world_port_2:0 "World Port"
+ world_port_2_desc:0 ""
+ world_trade_center_2:0 "World Trade Center"
+ world_trade_center_2_desc:0 ""
