--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -173,7 +173,8 @@
  TRADE_COMPANY_LAHORE_trade_Root_Culture_GetName:0 "[Root.Culture.GetName] Transoxiana Company"
  TRADE_COMPANY_LAHORE_trade_Asia_Trade_Company:0 "Transoxiana Trade Company"
  #centers of trade
-
+ regional_port:0 "Regional Port"
+ regional_port_desc:0 ""
  regional_hub:0 "Regional Hub"
  regional_hub_desc:0 ""
  world_port_2:0 "Trade Center Cap"
