--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -249,7 +249,7 @@ gc_ven_la_francocrazia:0 "La Francocrazia"
 gc_mlo_lombard_renaissance:0 "Lombard Renaissance"
 
 #timurid prince
-
+gc_tim_resurgent:0 "Timurid Resurgence"
 gc_mug_formation_hope:0 "Indian Raid"
 
 berber_fury_2:0 "Berber Fury"
