--- a/localisation/gecko_missions_l_english.yml
+++ b/localisation/gecko_missions_l_english.yml
@@ -460,3 +460,4 @@ gc_control_of_the_mediterranean_slave_trade:0 "Control of the Mediterranean Slav
  gc_emp_ven_aldine_monopoly_title:0 "Internal Investment"
  gc_emp_ven_aldine_monopoly_desc:0 ""
 
+ ME_ALLOW_FORMATION_OF_TIMURIDS:0 "Timurid Re-formation Allowed"
