--- a/localisation/gecko_ages_l_english.yml
+++ b/localisation/gecko_ages_l_english.yml
@@ -8,7 +8,7 @@
  ab_hesse_mercs:0 "Hessian Mercenaries"
  hesse_available_mercs_tt:0 "§G+15% Available Mercenaries§!"
  bur_available_mercs_tt:0 "§G+15% Available Mercenaries§!"
- ab_minor_building_dev:0 "Less than G+250 Development - Development from Buildings"
+ ab_minor_building_dev:0 "Less than 250 Development - Development from Buildings"
  #Age 2
  ab_bukhara_arty:0 "Bukharan Artillery"
  ab_arabia_speed:0 "Arabian Horses"
