--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -72,3 +72,15 @@ cordoba_area:0 "Cordoba"
 oxford_area:0 "Oxford"
 outer_austria_area:0 "Outer Austria"
 east_frisia_area:0 "East Frisia"
+highveld_area:0 "Highveld"
+highveld_area_name:0 "Highveld"
+highveld_area_name_adj:0 "Highveld's" 
+senqu_delta_area:0 "Senqu Delta"
+senqu_delta_area_name:0 "Senqu Delta"
+senqu_delta_area_adj:0 "Senqu Delta's" 
+xhosa_area:0 "Xhosa"
+xhosa_area_name:0 "Xhosa"
+xhosa_area_name_adj:0 "Xhosa's" 
+kalahari_basin_area:0 "Kalahari Basin"
+kalahari_basin_area_name:0 "Kalahari Basin"
+kalahari_basin_area_name_adj:0 "Kalahari Basin's" 
