old estate interactions re-integrated

--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -19,7 +19,7 @@
  estate_burghers_new_world_charter:0 "Grant New World Charters"
  estate_burghers_indebted_to_burghers:0 "Indebted to the $ESTATE_NAME$"
  estate_burghers_indebted_to_burghers_effect_tooltip:2 "Take §Y5§! five-year loans at §Y2.5%§! interest. The privilege will be removed automatically when repaid."
- estate_burghers_free_enterprise:0 "Free Enterprise"
+ estate_burghers_free_enterprise:0 "Demand Contribution"
  estate_cossacks_exploration_expedition:0 "Cossack Exploration Expeditions"
  estate_cossacks_cossack_self_governance:0 "Cossack Self-Governance"
  estate_cossacks_establish_the_cossack_regiments:0 "Establish the Cossack Regiments"
@@ -1073,7 +1073,7 @@
  estate_burghers_commercial_board_of_advice_desc:0 "In matters of commerce, the [Root.GetBurghersName] are far more knowledgeable than the [Root.Monarch.GetTitle]. It would be folly not to make use of this advice to ensure that the wheels of the economy remain in motion."
  estate_burghers_new_world_charter_desc:0 "The New World is a land of opportunities - particularly for entrepreneurs seeking to enrichen themselves. We should encourage this by offering the [Root.GetBurghersName] charters granting them favorable conditions for their businesses."
  estate_burghers_indebted_to_burghers_desc:0 "The [Root.GetBurghersName] are willing to offer cheap loans to the [Root.GovernmentName] in return for greater political influence. However, this would drain funding away from their business interests and cause a slowdown in the economy."
- estate_burghers_free_enterprise_desc:0 "Granting the [Root.GetBurghersName] greater freedom in their commercial affairs will increase their willingness to support the [Root.Monarch.GetTitle]."
+ estate_burghers_free_enterprise_desc:0 "Demand Monetary Contribution from the [Root.GetBurghersName]."
  estate_cossacks_exploration_expedition_desc:0 "[Root.GetCossacksName] roam our unexplored frontiers, shifting them back year by year. We should harness their pioneering instincts to accelerate our settlement of these areas."
  estate_cossacks_cossack_self_governance_desc:0 "The [Root.GetCossacksName] can best serve our nation by being left to their own devices."
  estate_cossacks_establish_the_cossack_regiments_desc:0 "The [Root.GetCossacksName] are fierce cavalry warriors that would represent a potent force for our army, if we can persuade them to serve us."
