--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -276,3 +276,4 @@ gc_swe_hakkapeliitta:0 "Hakkapeliitta"
  gc_Letat_cest_moi:0 "L'Etat, c'est moi"
  trade_hub_created_in_province:0 "Trade Hub Created in Province"
  trade_hub_created:0 "Trade Hub Created"
+ gc_african_gold_modifier:0 "African Gold"
