--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -636,6 +636,97 @@
  X_SPA_royal_shipyards_of_barcelona_pmod:0 "Reials Drassanes de Barcelona"
  desc_X_SPA_royal_shipyards_of_barcelona_pmod:0 ""
  ####################
+ # Expand Infrastructure & Province Estates
+ ####################
+ #Events
+ X_pe_and_ei_events.1.t:0 "Estates & Expand Infrastructure"
+ X_pe_and_ei_events.1.d1:0 ""
+ X_pe_and_ei_events.1.a:0 "Estates"
+ X_pe_and_ei_events.1.b:0 "Expand Infrastructure"
+ X_pe_and_ei_events.1.c:0 "§YClose§!"
+ X_pe_and_ei_events.2.t:0 "Control of [Root.GetName]"
+ X_pe_and_ei_events.2.d1:0 "§YCurrent Estate§! that holds power in [Root.GetName]: [GetXProvinceEstatesController]\n[GetXProvinceEstatesBurghersRestrictions]\n[GetXProvinceEstatesDhimmiRestrictions]"
+ X_pe_and_ei_events.2.d2:0 "You cannot grant an estate control of your capital."
+ X_pe_and_ei_events.2.d3:0 "You cannot grant an estate control of a territory."
+ X_pe_and_ei_events.2.d4:0 "You cannot grant an estate control of a territorial core."
+ X_pe_and_ei_events.2.d5:0 "You cannot grant an estate control of [Root.GetName] due to the following reasons:\nNot enough Crownland (Current amount: [From.From.X_province_estates_crownland_variable.GetValue]%) (Needed: [From.From.X_province_estates_development_localization_variable.GetValue]%)"
+ X_pe_and_ei_events.2.a:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_CHURCH$ control of [Root.GetName]"
+ X_pe_and_ei_events.2.b:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_BURGHERS$ control of [Root.GetName]"
+ X_pe_and_ei_events.2.c:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_NOBLES$ control of [Root.GetName]"
+ X_pe_and_ei_events.2.d:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_DHIMMI$ control of [Root.GetName]"
+ X_pe_and_ei_events.2.s:0 "§YBack§!"
+ X_pe_and_ei_events.3.t:0 "Expansion of [Root.GetName]"
+ X_pe_and_ei_events.3.d1:0 "Current Expansion Level in [Root.GetName]: §G[GetXExpandInfrastructureLevel]§!\n[GetXExpandInfrastructureCostRestrictions]\n[GetXExpandInfrastructureDevelopmentRestrictions]"
+ X_pe_and_ei_events.3.a:0 "§GExpand§! Infrastructure in [Root.GetName]"
+ X_pe_and_ei_events.3.b:0 "§RReduce§! Infrastructure in [Root.GetName]"
+ X_pe_and_ei_events.3.c:0 "§YBack§!"
+ #Customizable Localization
+ X_expand_infrastructure_level_0:0 "0"
+ X_expand_infrastructure_level_1:0 "1"
+ X_expand_infrastructure_level_2:0 "2"
+ X_expand_infrastructure_level_3:0 "3"
+ X_expand_infrastructure_level_4:0 "4"
+ X_expand_infrastructure_level_5:0 "5"
+ X_expand_infrastructure_level_6:0 "6"
+ X_expand_infrastructure_level_7:0 "7"
+ X_expand_infrastructure_level_8:0 "8"
+ X_expand_infrastructure_level_9:0 "9"
+ X_expand_infrastructure_level_10:0 "10"
+ X_grant:0 "Grant"
+ X_revoke:0 "Revoke"
+ X_expand:0 "Expand"
+ X_reduce:0 "Reduce"
+ X_estate_church_province_controller:0 "§OClergy§!."
+ X_estate_burghers_province_controller:0 "§BBurghers§!."
+ X_estate_nobles_province_controller:0 "§RNobility§!."
+ X_estate_nobles_dhimmi_controller:0 "§JDhimmi§!."
+ X_no_estate_province_controller:0 "§gNone§!."
+ X_estate_burghers_province_restrictions:0 "-You cannot grant the Burghers control of [Root.GetName] because [Root.GetName] does not meet at least one of these conditions:\n   Province Trade Power at least 5\n   Development at least 10\n   At least one Center of Trade of level 1"
+ X_estate_dhimmi_province_restrictions:0 "-You cannot grant the Dhimmi control of [Root.GetName] because [Root.GetName] does not meet at least one of these conditions:\n   Province is in Muslim religion group"
+ X_expand_infrastructure_cost_restrictions:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Administrative Power is less than 30"
+ X_expand_infrastructure_development_restrictions_1:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 10"
+ X_expand_infrastructure_development_restrictions_2:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 20"
+ X_expand_infrastructure_development_restrictions_3:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 30"
+ X_expand_infrastructure_development_restrictions_4:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 40"
+ X_expand_infrastructure_development_restrictions_5:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 50"
+ X_expand_infrastructure_development_restrictions_6:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 60"
+ X_expand_infrastructure_development_restrictions_7:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 70"
+ X_expand_infrastructure_development_restrictions_8:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 80"
+ X_expand_infrastructure_development_restrictions_9:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 90"
+ X_expand_infrastructure_development_restrictions_10:0 "-You cannot Expand Infrastructure in [Root.GetName] because of the following reasons: Development in [Root.GetName] is less than 100"
+ #Modifiers
+ X_estate_church_province_control_pmod:0 "Clergy Control"
+ desc_X_estate_church_province_control_pmod:0 ""
+ X_estate_burghers_province_control_pmod:0 "Burghers Control"
+ desc_X_estate_burghers_province_control_pmod:0 ""
+ X_estate_nobles_province_control_pmod:0 "Nobility Control"
+ desc_X_estate_nobles_province_control_pmod:0 ""
+ X_estate_dhimmi_province_control_pmod:0 "Dhimmi Control"
+ desc_X_estate_dhimmi_province_control_pmod:0 ""
+ X_expand_infrastructure_tier_1_pmod:0 "Expand Infrastructure: Level 1"
+ desc_X_expand_infrastructure_tier_1_pmod:0 ""
+ X_expand_infrastructure_tier_2_pmod:0 "Expand Infrastructure: Level 2"
+ desc_X_expand_infrastructure_tier_2_pmod:0 ""
+ X_expand_infrastructure_tier_3_pmod:0 "Expand Infrastructure: Level 3"
+ desc_X_expand_infrastructure_tier_3_pmod:0 ""
+ X_expand_infrastructure_tier_4_pmod:0 "Expand Infrastructure: Level 4"
+ desc_X_expand_infrastructure_tier_4_pmod:0 ""
+ X_expand_infrastructure_tier_5_pmod:0 "Expand Infrastructure: Level 5"
+ desc_X_expand_infrastructure_tier_5_pmod:0 ""
+ X_expand_infrastructure_tier_6_pmod:0 "Expand Infrastructure: Level 6"
+ desc_X_expand_infrastructure_tier_6_pmod:0 ""
+ X_expand_infrastructure_tier_7_pmod:0 "Expand Infrastructure: Level 7"
+ desc_X_expand_infrastructure_tier_7_pmod:0 ""
+ X_expand_infrastructure_tier_8_pmod:0 "Expand Infrastructure: Level 8"
+ desc_X_expand_infrastructure_tier_8_pmod:0 ""
+ X_expand_infrastructure_tier_9_pmod:0 "Expand Infrastructure: Level 9"
+ desc_X_expand_infrastructure_tier_9_pmod:0 ""
+ X_expand_infrastructure_tier_10_pmod:0 "Expand Infrastructure: Level 10"
+ desc_X_expand_infrastructure_tier_10_pmod:0 ""
+ #Tooltips
+ X_province_estates_development_tt:0 "The land controlled by this estate changes: §Y+[Root.X_province_estates_development_localization_variable.GetValue]%§!\nThis estate will gain §G[Root.X_province_estates_loyalty_variable.GetValue]§! loyalty."
+ X_province_estates_development_tt2:0 "The land controlled by this estate changes: §Y-[Root.X_province_estates_development_localization_variable.GetValue]%§!\nThis estate will lose §R[Root.X_province_estates_disloyalty_localization_variable.GetValue]§! loyalty."
+ ####################
  # Tiered Modifiers
  ####################
  #tartar
