Can now revoke estate province control at 0 crownland. dhimmi estate revoked after province religion change. localization fixes.

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -649,7 +649,7 @@
  X_pe_and_ei_events.2.d2:0 "You cannot grant an estate control of your capital."
  X_pe_and_ei_events.2.d3:0 "You cannot grant an estate control of a territory."
  X_pe_and_ei_events.2.d4:0 "You cannot grant an estate control of a territorial core."
- X_pe_and_ei_events.2.d5:0 "You cannot grant an estate control of [Root.GetName] due to the following reasons:\nNot enough Crownland (Current amount: [From.From.X_province_estates_crownland_variable.GetValue]%) (Needed: [From.From.X_province_estates_development_localization_variable.GetValue]%)"
+ X_pe_and_ei_events.2.d5:0 "You cannot grant an estate control of [Root.GetName] due to the following reasons:\nNot enough Crownland (Current amount: [From.From.From.X_province_estates_crownland_variable.GetValue]%) (Needed: [From.From.X_province_estates_development_localization_variable.GetValue]%)"
  X_pe_and_ei_events.2.a:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_CHURCH$ control of [Root.GetName]"
  X_pe_and_ei_events.2.b:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_BURGHERS$ control of [Root.GetName]"
  X_pe_and_ei_events.2.c:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_NOBLES$ control of [Root.GetName]"
@@ -679,7 +679,7 @@
  X_estate_church_province_controller:0 "§OClergy§!."
  X_estate_burghers_province_controller:0 "§BBurghers§!."
  X_estate_nobles_province_controller:0 "§RNobility§!."
- X_estate_nobles_dhimmi_controller:0 "§JDhimmi§!."
+ X_estate_dhimmi_province_controller:0 "§JDhimmi§!."
  X_no_estate_province_controller:0 "§gNone§!."
  X_estate_burghers_province_restrictions:0 "-You cannot grant the Burghers control of [Root.GetName] because [Root.GetName] does not meet at least one of these conditions:\n   Province Trade Power at least 5\n   Development at least 10\n   At least one Center of Trade of level 1"
  X_estate_dhimmi_province_restrictions:0 "-You cannot grant the Dhimmi control of [Root.GetName] because [Root.GetName] does not meet at least one of these conditions:\n   Province is in Muslim religion group"
