truly innovative estate and crownland rework

--- a/localisation/emperor_l_english.yml
+++ b/localisation/emperor_l_english.yml
@@ -968,15 +968,15 @@
  RAISEWARTAXESSTOPPED_2:0 "Because of our lack of enough Military Power we have had to stop collecting the raised war taxes for our wars."
  RAISEWARTAXESSTOPPED_LOG:0 "Because of our lack of enough Military Power we have had to stop collecting the raised war taxes for our wars."
  RAISEWARTAXESSTOPPED_BTN1:0 "OK"
- estate_church_ownership:0 "[Country.GetClergyName] Land Ownership"
+ estate_church_ownership:0 "Church Land Ownership"
  estate_brahmins_ownership:0 "[Country.GetBrahminsName] Land Ownership"
  estate_maratha_ownership:0 "[Country.GetMarathasName] Land Ownership"
- estate_nobles_ownership:0 "[Country.GetNobilityName] Land Ownership"
- estate_burghers_ownership:0 "[Country.GetBurghersName] Land Ownership"
+ estate_nobles_ownership:0 "Nobility Land Ownership"
+ estate_burghers_ownership:0 "Burgher Land Ownership"
  estate_vaisyas_ownership:0 "[Country.GetVaishyasName] Land Ownership"
  estate_cossacks_ownership:0 "[Country.GetCossacksName] Land Ownership"
  estate_nomadic_tribes_ownership:0 "[Country.GetTribesName] Land Ownership"
- estate_dhimmi_ownership:0 "[Country.GetDhimmiName] Land Ownership"
+ estate_dhimmi_ownership:0 "Dhimmi Land Ownership"
  estate_jains_ownership:0 "[Country.GetJainsName] Land Ownership"
  estate_rajput_ownership:0 "[Country.GetRajputsName] Land Ownership"
  ESTATE_OWNERSHIP_INFLUENCE:0 "$ESTATE$ Influence: $VALUE|1Y&$\n"
