tribes get free cav privilege and increased levies privilege

--- a/localisation/gecko_privileges_l_english.yml
+++ b/localisation/gecko_privileges_l_english.yml
@@ -173,3 +173,5 @@
 
 estate_gc_priv_6:0 "Primacy of the Tribes"
 estate_gc_priv_6_desc:0 ""
+estate_gc_priv_7:0 "Increased Levies"
+estate_gc_priv_7_desc:0 ""
