estate rebalance decision added

--- a/localisation/gecko_decisions_l_english.yml
+++ b/localisation/gecko_decisions_l_english.yml
@@ -59,6 +59,18 @@
  splendor_mercs_desc:0 "Due to our splendor, we can attract mercenaries previous unavailable to us."
  establish_imperial_guard_title:0 "Reform the Imperial Guard"
  establish_imperial_guard_desc:0 ""
+ estate_rebalance_nobles_title:0 "§GGrant Land to the Nobility§!"
+ estate_rebalance_nobles_desc:0 ""
+ estate_rebalance_tribes_title:0 "§GGrant Land to the Tribes§!"
+ estate_rebalance_tribes_desc:0 ""
+ estate_rebalance_church_title:0 "§GGrant Land to the Church§!"
+ estate_rebalance_church_desc:0 ""
+ estate_rebalance_burghers_title:0 "§GGrant Land to the Burghers§!"
+ estate_rebalance_burghers_desc:0 ""
+ estate_rebalance_dhimmi_title:0 "§GGrant Land to the Dhimmi§!"
+ estate_rebalance_dhimmi_desc:0 ""
+ allow_estate_rebalance_title:0 "§GGrant Land to Estates§!"
+ allow_estate_rebalance_desc:0 "Spend the resources of the State to change the influence our Estates have over the nation."
  #gecko critial events
  GC_infantry_leader_cooldown_tooltip:0 "Infantry Leader"
  GC_cavalry_leader_cooldown_tooltip:0 "Cavalry Leader"
