--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -32,6 +32,7 @@
  carribean_trade:0 "Carribean"
  tunis:0 "Barbary Coast"
  genua:0 "Mediterranean"
+ venice:0 "Adriatic"
  wien:0 "Danube"
  saxony:0 "Prague"
  gc_south_germany_tradenode:0 "Swabia"
