--- a/localisation/replace/gecko_trade_l_english.yml
+++ b/localisation/replace/gecko_trade_l_english.yml
@@ -34,7 +34,7 @@
  genua:0 "Mediterranean"
  venice:0 "Adriatic"
  wien:0 "Danube"
- saxony:0 "Prague"
+ saxony:0 "Saxony"
  gc_south_germany_tradenode:0 "Swabia"
  pest:0 "Pest"
  rheinland:0 "Rheinland"
@@ -94,18 +94,21 @@
  trade_company_genua:0 "Ligurian Charter"
  TRADE_COMPANY_GENUA_Root_Culture_GetName:0 "[Root.Culture.GetName] Liguria Company"
  TRADE_COMPANY_GENUA_European_Trade_Company:0 "Liguria Trade Company"
+ trade_company_venice:0 "Adriatic Charter"
+ TRADE_COMPANY_VENICE_Root_Culture_GetName:0 "[Root.Culture.GetName] Adriatic Company"
+ TRADE_COMPANY_VENICE_European_Trade_Company:0 "Adriatic Trade Company"
  trade_company_tunis:0 "Barbary Coast Charter"
  TRADE_COMPANY_TUNIS_Root_Culture_GetName:0 "[Root.Culture.GetName] Barbary Coast Company"
  TRADE_COMPANY_TUNIS_African_Trade_Company:0 "Barbary Coast Trade Company"
  trade_company_rheinland:0 "Rhineland Charter"
  TRADE_COMPANY_RHEINLAND_Root_Culture_GetName:0 "[Root.Culture.GetName] Rhineland Company"
  TRADE_COMPANY_RHEINLAND_European_Trade_Company:0 "Rhineland Trade company"
- trade_company_saxony:0 "Prague Charter"
- TRADE_COMPANY_SAXONY_Root_Culture_GetName:0 "[Root.Culture.GetName] Prague Company"
- TRADE_COMPANY_SAXONY_European_Trade_Company:0 "Prague Trade Company"
- trade_company_wien:0 "Austrian Charter"
- TRADE_COMPANY_WIEN_Root_Culture_GetName:0 "[Root.Culture.GetName] Austria Company"
- TRADE_COMPANY_WIEN_European_Trade_Company:0 "Austria Trade Company"
+ trade_company_saxony:0 "Saxon Charter"
+ TRADE_COMPANY_SAXONY_Root_Culture_GetName:0 "[Root.Culture.GetName] Saxony Company"
+ TRADE_COMPANY_SAXONY_European_Trade_Company:0 "Saxony Trade Company"
+ trade_company_wien:0 "Danube Charter"
+ TRADE_COMPANY_WIEN_Root_Culture_GetName:0 "[Root.Culture.GetName] Danube Company"
+ TRADE_COMPANY_WIEN_European_Trade_Company:0 "Danube Trade Company"
  trade_company_krakow:0 "Polish Charter"
  TRADE_COMPANY_KRAKOW_Root_Culture_GetName:0 "[Root.Culture.GetName] Poland Company"
  TRADE_COMPANY_KRAKOW_European_Trade_Company:0 "Poland Trade Company"
@@ -166,9 +169,6 @@
  trade_company_caucasus:0 "Caucasus Charter"
  TRADE_COMPANY_caucasus_Root_Culture_GetName:0 "Caucasus Company"
  TRADE_COMPANY_caucasus_Near_East_Trade_Company:0 "Caucasus Trade Company"
- trade_company_south_germany:0 "South Germany Charter"
- TRADE_COMPANY_south_germany_Root_Culture_GetName:0 "South Germany Company"
- TRADE_COMPANY_south_germany_European_Trade_Company:0 "South Germany Trade Company"
  trade_company_siberia:0 "Siberian Charter"
  TRADE_COMPANY_SIBERIA_Root_Culture_GetName:0 "[Root.Culture.GetName] Siberia Company"
  TRADE_COMPANY_SIBERIA_Asia_Trade_Company:0 "Siberia Trade Company"
