seizing land no longer gives rebels

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -4158,6 +4158,8 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  COLONIAL_AUSTRALIA_Hoju_ADJ:0 "Hojun"
  COLONIAL_AUSTRALIA_Root_Culture_GetName_Australia:0 "[Root.GetAdjective] Australia"
  COLONIAL_AUSTRALIA_Root_Culture_GetName_Australia_ADJ:0 "[Root.GetAdjective] Australian"
+ COLONIAL_SOUTH_AFRICA_Root_Culture_GetName_SouthAfrica:0 "[Root.GetAdjective] South Africa"
+ COLONIAL_SOUTH_AFRICA_Root_Culture_GetName_SouthAfrica_ADJ:0 "[Root.GetAdjective] South African"
  COLONIAL_REGION_Terra_Australis:0 "Terra Australis"
  COLONIAL_REGION_Terra_Australis_ADJ:0 "Terra Australian"
  tariffs_on_grain:0 "Tariffs on Grain"
