--- a/localisation/gecko_areas_regions_l_english.yml
+++ b/localisation/gecko_areas_regions_l_english.yml
@@ -63,7 +63,7 @@ jaghbub_area_adj:0 "Jaghbubian"
 namibia_area:0 "Namibia"
 namibia_area_name:0 "Namibia"
 namibia_area_adj:0 "Namibia"
-XMP_central_greece_area:0 "Central Greece"
+X_central_greece_area:0 "Central Greece"
 berlin_area:0 "Berlin"
 lubeck_area:0 "Lubeck"
 bern_area:0 "Bern"
