all localisation files updated

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -57,7 +57,7 @@
  CONFIRSIBERIANFRONTIER_TEXT:0 "$EFFECT$\nAre you sure?"
  NOT_SIB_TO_BE_SEI:0 "Siberian Frontiers cannot be seized like normal colonies."
  SIB_FRONTIER_TOOLTIP:0 "This colony gains between $MIN|Y$ and $MAX|Y$ settlers each month."
-SIB_FRONT_TXT:1 "Frontier"
+ SIB_FRONT_TXT:1 "Frontier"
  NOSF_NO_POINTS:0 "You need §Y$COST$§!£dip to establish a Siberian frontier, and you only have §Y$VAL$§!."
  NOSF_HAS_OWNER:1 "You can't establish a new Siberian frontier in a province which is currently being colonized."
  NOSF_ALREADY_COLONISED:0 "It is impossible to establish a Siberian frontier in a province where there is a colonization of some sort in process."
@@ -325,7 +325,7 @@ ab_manchu_banner_tt:0 "§G+50%§! Possible Manchu banners if available"
  ab_mercenary_discipline:0 "Mercenary Discipline"
  splendor:0 "Splendor"
  feudal_de_jure_law:1 "Allows State Edict '§YFeudal De Jure Law§!'\n (Unrest: §G-5§!)\n"
- #religion_enforced_edict:1 "Allows State Edict '§YReligion Enforced§!'\n (Resistance to Reformation: §G+90%§!)\n"
+ religion_enforced_edict:2 "Allows State Edict '§YReligion Enforced§!'\n (Resistance to Reformation: §G+100%§!)\n"
  edict_of_absolutism_tt:1 "Allows State Edict '§YEdict of Absolutism§!'\n (Monthly Devastation: §G-0.25§!)\n"
  in_golden_era:0 "§YGolden Era§!"
  absolutism:0 "Absolutism"
