--- a/localisation/gecko_ideas_l_english.yml
+++ b/localisation/gecko_ideas_l_english.yml
@@ -16,7 +16,7 @@
   egy_3_desc:0 "Religious toleration may signify 'no more than forbearance and the permission given by the adherents of a dominant religion for other religions to exist, even though the latter are looked on with disapproval as inferior, mistaken, or harmful'."
   egy_4_desc:0 "Our administration is staffed with time servers who are too busy plotting against each other to aggrandize themselves. We shall return to the traditional ways and bring in new Mamluks to staff our administration."
   egy_5_desc:0 "Africas finest Camel are bred and domesticated in Egypt."
-  egy_7_desc:0 "The breadbasket of a country or of a region is an area which, because of the richness of the soil and/or advantageous climate, produces large quantities of wheat or other grain."^
+  egy_7_desc:0 "The breadbasket of a country or of a region is an area which, because of the richness of the soil and/or advantageous climate, produces large quantities of wheat or other grain."
 
 
   #Great Zimbabwe
