--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -5135,7 +5135,7 @@
  HAVE_LESS_LAND_FORCELIMIT:0 "Have a land force limit of less than"
  HAVE_MORE_LAND_FORCELIMIT:0 "Have a land force limit of at least"
  HAVE_LESS_NAVAL_FORCELIMIT:0 "Have a Naval Force Limit of less than"
- HAVE_MORE_NAVAL_FORCELIMIT:0 "Have a Naval Force Limit of at LEAST"
+ HAVE_MORE_NAVAL_FORCELIMIT:1 "Have a Naval Force Limit of at least"
  large_tribe_bad_adm:0 "Incapable Ruler"
  desc_large_tribe_bad_adm:0 "Ruler can't handle the Administrative details of our Tribe"
  large_tribe_bad_dip:0 "Incapable Ruler"
@@ -7382,9 +7382,11 @@
  desc_thalassocracy:0 "Thalassocracy, Rule by The Sea. Ours is a people whose lives are lived out with, by and for the sea. Our empire stretches far beyond our homeland and into far flung colonies in our extended Outremer, our Lands Beyond The Sea. From coast to coasts beyond, our flags wave from ships upon the briny foam. The sea is cold, yet we have made it our home. Let no one challenge us in our proper element."
  confirm_thalassocracy_title:0 "Confirm Thalassocracy"
  confirm_thalassocracy_desc:0 "By confirming our Thalassocracy, our rule by the sea, we will receive tremendous bonuses to our navy, propelling us into a position of unrivaled dominance over the oceans."
- confirm_thalassocracy_a_tt:0 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[1298.GetName]§!, §Y[1308.GetName]§!, §Y[341.GetName]§!, §Y[137.GetName]§! and §Y[358.GetName]§!."
+ confirm_thalassocracy_a_tt:1 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[1298.GetName]§!, §Y[1295.GetName]§!, §Y[341.GetName]§!, §Y[1293.GetName]§! and §Y[1110.GetName]§!."
  confirm_thalassocracy_b_tt:0 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[45.GetName]§!, §Y[1926.GetName]§!, §Y[1269.GetName]§!, §Y[1975.GetName]§! and §Y[33.GetName]§!."
- confirm_thalassocracy_c_tt:0 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[4346.GetName]§!, §Y[504.GetName]§!, §Y[1340.GetName]§!, §Y[1343.GetName]§! and §Y[1361.GetName]§!."
+ confirm_thalassocracy_c_tt:1 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[1308.GetName]§!, §Y[137.GetName]§!, §Y[358.GetName]§!, §Y[1320.GetName]§! and §Y[377.GetName]§!."
+ confirm_thalassocracy_d_tt:0 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[1448.GetName]§!, §Y[4346.GetName]§!, §Y[1334.GetName]§!, §Y[504.GetName]§! and §Y[1340.GetName]§!."
+ confirm_thalassocracy_e_tt:0 "§Y[Root.GetName]§! is the strongest Trade Power in §Y[1343.GetName]§!, §Y[1365.GetName]§!, §Y[1361.GetName]§!, §Y[1357.GetName]§! and §Y[1397.GetName]§!."
  boom_economy:0 "Booming Economy"
  desc_boom_economy:0 "Our cup runneth over! The economy is booming!"
  restore_currency_title:0 "Restore The Currency"
