--- a/localisation/emperor_estates_l_english.yml
+++ b/localisation/emperor_estates_l_english.yml
@@ -48,8 +48,8 @@
  estate_brahmins_brahmin_governance:0 "Brahmin Governance"
  estate_brahmins_legitimacy_to_rule:0 "Brahmin Legitimacy to Rule"
  estate_brahmins_brahmin_leadership:0 "Brahmin Leadership"
- estate_brahmins_flexible_deities:0 "Choice of Personal Deities"
- estate_brahmins_flexible_deities_effect_tooltip:1 "Enables a decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy."
+ estate_brahmins_flexible_deities:1 "Choice of Personal Deity"
+ estate_brahmins_flexible_deities_effect_tooltip:2 "Enables a decision that allows you to change your Personal Deity every §Y20§! years at the cost of §Y25§! legitimacy (or its equivalent for other governments)."
  brahmin_hindu_deity_decision_title:0 "Choose Personal Deity Again"
  brahmin_hindu_deity_decision_desc:0 "Sometimes, one regrets one's choices. Why should one's choice as a young man of which deity to follow apply for the rest of one's life? Fortunately, our arrangements with the Brahmins allow us some flexibility on the matter."
  decision_once_every_ten_years:0 "This decision can only be taken once every §Y10§! years."
@@ -1280,7 +1280,7 @@
  estate_burghers_exclusive_trade_rights_revoke_tooltip:0 "Removes "Exclusive Trade Rights" modifier from all owned provinces"
  PRIVILEGE_LOYALTY_CHANGE:1 "$ESTATE$ Loyalty equilibrium will change by $VAL|+%0$."
  PRIVILEGE_INFLUENCE_CHANGE:0 "$ESTATE$ Influence will change by $VAL|Y%0$."
- PRIVILEGE_MAX_ABSOLUTISM_CHANGE:0 "Max Absolutism will be change by $VAL|+0$."
+ PRIVILEGE_MAX_ABSOLUTISM_CHANGE:1 "Max Absolutism will be changed by $VAL|+0$."
  PRIVILEGE_LANDSHARE_CHANGE:0 "We will $DIR$ $VAL|Y0$ crown land."
  PRIVILEGE_NO_CHANGE:0 "This privilege does not affect $WHAT|Y$."
  CROWNLAND:0 "Crown Land"
