--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -639,10 +639,10 @@
  # Expand Infrastructure & Province Estates
  ####################
  #Events
- X_pe_and_ei_events.1.t:0 "Estates & Expand Infrastructure"
+ X_pe_and_ei_events.1.t:0 "Estates & Infrastructure"
  X_pe_and_ei_events.1.d1:0 "Current Estate Land Distribution:[GetXProvinceEstatesNumOfChurchProvinces][GetXProvinceEstatesNumOfBurghersProvinces][GetXProvinceEstatesNumOfNoblesProvinces][GetXProvinceEstatesNumOfDhimmiProvinces]"
  X_pe_and_ei_events.1.a:0 "Estates"
- X_pe_and_ei_events.1.b:0 "Expand Infrastructure"
+ X_pe_and_ei_events.1.b:0 "Infrastructure"
  X_pe_and_ei_events.1.c:0 "§YClose§!"
  X_pe_and_ei_events.2.t:0 "Control of [Root.GetName]"
  X_pe_and_ei_events.2.d1:0 "§YCurrent Estate§! that holds power in [Root.GetName]: [GetXProvinceEstatesController]\n[GetXProvinceEstatesBurghersRestrictions]\n[GetXProvinceEstatesDhimmiRestrictions]"
@@ -655,7 +655,7 @@
  X_pe_and_ei_events.2.c:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_NOBLES$ control of [Root.GetName]"
  X_pe_and_ei_events.2.d:0 "[GetXProvinceEstatesGrantOrRevoke] the $ESTATE_DHIMMI$ control of [Root.GetName]"
  X_pe_and_ei_events.2.s:0 "§YBack§!"
- X_pe_and_ei_events.3.t:0 "Expansion of [Root.GetName]"
+ X_pe_and_ei_events.3.t:0 "Development of [Root.GetName]"
  X_pe_and_ei_events.3.d1:0 "Current Expansion Level in [Root.GetName]: §G[GetXExpandInfrastructureLevel]§!\n[GetXExpandInfrastructureCostRestrictions]\n[GetXExpandInfrastructureDevelopmentRestrictions]"
  X_pe_and_ei_events.3.a:0 "§GExpand§! Infrastructure in [Root.GetName]"
  X_pe_and_ei_events.3.b:0 "§RReduce§! Infrastructure in [Root.GetName]"
@@ -707,25 +707,25 @@
  desc_X_estate_nobles_province_control_pmod:0 ""
  X_estate_dhimmi_province_control_pmod:0 "Dhimmi Control"
  desc_X_estate_dhimmi_province_control_pmod:0 ""
- X_expand_infrastructure_tier_1_pmod:0 "Expand Infrastructure: Level 1"
+ X_expand_infrastructure_tier_1_pmod:0 "Expanded Infrastructure: Level 1"
  desc_X_expand_infrastructure_tier_1_pmod:0 ""
- X_expand_infrastructure_tier_2_pmod:0 "Expand Infrastructure: Level 2"
+ X_expand_infrastructure_tier_2_pmod:0 "Expanded Infrastructure: Level 2"
  desc_X_expand_infrastructure_tier_2_pmod:0 ""
- X_expand_infrastructure_tier_3_pmod:0 "Expand Infrastructure: Level 3"
+ X_expand_infrastructure_tier_3_pmod:0 "Expanded Infrastructure: Level 3"
  desc_X_expand_infrastructure_tier_3_pmod:0 ""
- X_expand_infrastructure_tier_4_pmod:0 "Expand Infrastructure: Level 4"
+ X_expand_infrastructure_tier_4_pmod:0 "Expanded Infrastructure: Level 4"
  desc_X_expand_infrastructure_tier_4_pmod:0 ""
- X_expand_infrastructure_tier_5_pmod:0 "Expand Infrastructure: Level 5"
+ X_expand_infrastructure_tier_5_pmod:0 "Expanded Infrastructure: Level 5"
  desc_X_expand_infrastructure_tier_5_pmod:0 ""
- X_expand_infrastructure_tier_6_pmod:0 "Expand Infrastructure: Level 6"
+ X_expand_infrastructure_tier_6_pmod:0 "Expanded Infrastructure: Level 6"
  desc_X_expand_infrastructure_tier_6_pmod:0 ""
- X_expand_infrastructure_tier_7_pmod:0 "Expand Infrastructure: Level 7"
+ X_expand_infrastructure_tier_7_pmod:0 "Expanded Infrastructure: Level 7"
  desc_X_expand_infrastructure_tier_7_pmod:0 ""
- X_expand_infrastructure_tier_8_pmod:0 "Expand Infrastructure: Level 8"
+ X_expand_infrastructure_tier_8_pmod:0 "Expanded Infrastructure: Level 8"
  desc_X_expand_infrastructure_tier_8_pmod:0 ""
- X_expand_infrastructure_tier_9_pmod:0 "Expand Infrastructure: Level 9"
+ X_expand_infrastructure_tier_9_pmod:0 "Expanded Infrastructure: Level 9"
  desc_X_expand_infrastructure_tier_9_pmod:0 ""
- X_expand_infrastructure_tier_10_pmod:0 "Expand Infrastructure: Level 10"
+ X_expand_infrastructure_tier_10_pmod:0 "Expanded Infrastructure: Level 10"
  desc_X_expand_infrastructure_tier_10_pmod:0 ""
  #Tooltips
  X_province_estates_development_tt:0 "The land controlled by this estate changes: §Y+[Root.X_province_estates_crownland_cost_variable.GetValue]%§!\nThis estate will gain §G[Root.X_province_estates_loyalty_variable.GetValue]§! loyalty."
